# contextful

./: .gitignore  LICENSE  README.md  pyproject.toml
contextful/: __init__.py  chain_context_logger.py  context_logger.py  stack_context_logger.py  store_context_logger.py  vars_context_logger.py
contextful/future/: __init__.py  formatters.py
tests/: test_asyncio_support.py  test_base_context.py  test_context.py  test_empty_context.py  test_inline_context.py  test_multi_context_definitions.py  test_top_level_fields.py
